# basketball-highlights

./: .env  .gitignore  AGENTS.md  CLAUDE.md  README.md  package.json
.trae/documents/: 实现篮球投篮检测视频集锦功能.md  将 shot-detector 项目迁移到 uv 依赖管理.md  添加本地视频文件上传功能.md  重构ShotDetectorAPI与ShotDetector继承关系.md  集成篮球进球检测功能到项目中.md
apps/api/: dev.ts  worker.ts  wrangler.jsonc
apps/api/lib/: app.ts  context.ts
apps/api/routers/: shotDetection.ts
apps/app/components/layout/: constants.ts
apps/app/lib/: routeTree.gen.ts
apps/app/lib/queries/: shot-detection.ts
apps/app/routes/(app)/: shot-detection.tsx
apps/shot-detector/: Dockerfile  README-zh.md  README.md  app.py  config.yaml  main.py  package.json  pyproject.toml  requirements.txt  setup.py  shot_detector.py  shot_detector_api.py
apps/web/layouts/: BaseLayout.astro
apps/web/pages/: about.astro  features.astro  index.astro  pricing.astro
openspec/changes/add-local-video-upload/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-14-update-web-basketball-saas/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-14-update-web-basketball-saas/specs/basketball-saas-marketing/: spec.md
openspec/specs/basketball-saas-marketing/: spec.md
