[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shot-detector"
version = "0.1.0"
description = "Basketball shot detector using object detection"
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools]
py-modules = ["app", "main", "shot_detector", "utils"]
