[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shot-detector"
version = "0.1.0"
description = "Basketball shot detector using object detection"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "ultralytics>=8.0.0",
    "cvzone>=1.5.6",
    "python-multipart>=0.0.9"
]

[tool.setuptools]
py-modules = ["app", "main", "shot_detector", "utils", "shot_detector_api"]
